# Hardware-CPP

./: .gitignore  .travis.yml  CMakeLists.txt  Hovercraft_devices.pro  MDM.h  MDM0.txt  MES0.txt  MS5837.h  MT0.txt  Maestro0.txt  Main.cpp  Makefile  MiniSSC0.txt  NMEADevice0.txt  OSComputerI2CBus.h  OSComputerRS232Port.h  OSCore.h  OSMisc.h  OSNet.h  OSTime.h  P33x0.txt  PathfinderDVL0.txt  Pololu0.txt  RPLIDAR.h  RazorAHRS0.txt  ReadMe.txt  SSC320.txt  Seanet0.txt  Test_devices.pro  Test_devices.sln  Test_devices.vcproj  Test_devices.vcxproj  Test_devices.vcxproj.filters  Test_devices_Bundle.bat  Test_devices_Debug.bat  Test_devices_Linux.vcxproj  Test_devices_Linux.vcxproj.filters  Test_devices_Release.bat  Velodyne.h  Velodyne0.txt  (+1 more)
.github/workflows/: github-actions.yml
Backup_vs2008/: Test_devices.sln  Test_devices.vcproj
Backup_vs2012/: Test_devices.sln  Test_devices.vcxproj  Test_devices.vcxproj.filters
Backup_vs2015/: ReadMe.txt  Test_devices.sln  Test_devices.vcxproj  Test_devices.vcxproj.filters  Test_devices_Linux.vcxproj  Test_devices_Linux.vcxproj.filters
Backup_vs2017/: Test_devices.sln
